gitops/manifests/archive/joplin/joplin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: joplin
  namespace: joplin
  labels:
    app: joplin
    app.kubernetes.io/name: joplin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: joplin
  template:
    metadata:
      labels:
        app: joplin
        app.kubernetes.io/name: joplin
    spec:
      containers:
      - name: joplin
        image: joplin/server:3.3.13
        imagePullPolicy: Always
        ports:
        - containerPort: 22300 # internal port for the app
        resources:
          requests:
            memory: "256Mi"  
            cpu: "50m"      
          limits:
            memory: "512Mi"  
            cpu: "200m" 
---
apiVersion: v1
kind: Service
metadata:
  name: joplin
  namespace: joplin
  labels:
    app.kubernetes.io/name: joplin
spec:
  selector:
    app: joplin
  ports:
  - name: http
    port: 80 # we talk to 80
    protocol: TCP
    targetPort: 22300 # app listens here
  # type: LoadBalancer # for debugging
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: joplin
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "900"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "900"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "900"
    nginx.ingress.kubernetes.io/proxy-next-upstream-timeout: "900"
    
spec:
  ingressClassName: nginx
  rules:
  - host: joplin.${DOMAIN_NAME}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: joplin
            port:
              number: 80
  tls:
  - hosts:
      - joplin.${DOMAIN_NAME}
    secretName: letsencrypt-wildcard-cert-pengiuns.com-production
